<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TTSActivity!</string>
    <string name="app_name">Speak iT !</string>
    <string name="speak">Speak iT !</string>
    <string name="entertext">Enter Text Here To Speak</string>
    <string name="toastnullmsg">The TextField cannot be blank</string>
    <string name="btnname">Speak</string>
    <string name="langeng">English</string>
    <string name="langfr">French</string>
    <string name="langsel">Select Language</string>
    
	<style name="ButtonText">
    <item name="android:layout_width">fill_parent</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="android:textColor">#ffffff</item>
    <item name="android:gravity">center</item>
    <item name="android:layout_margin">3dp</item>
    <item name="android:textSize">30dp</item>
    <item name="android:textStyle">bold</item>
    <item name="android:shadowColor">#000000</item>
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">2</item>
</style>
</resources>